# agentcarousel

./: .gitignore  .ubsignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  agentcarousel.example.toml  agentcarousel.toml  install.sh  mkdocs.yml  repo-info.md
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/.br_recovery/: beads.db.20260514_050713_724291000.bak
.beads/backup/: backup_state.json  manifest
.cargo/: config.toml
.github/test-fixtures/: invalid-skill.yaml
.github/workflows/: agentcarousel.yml  docs.yml  packaging.yml  releasing.yml  rust-clippy.yml  smoke.yml
crates/agentcarousel/: Cargo.toml
crates/agentcarousel/dashboard/: compare.html  index.html  review.html  run.html
crates/agentcarousel/src/: lib.rs
crates/agentcarousel/src/cli/: bundle.rs  compare.rs  completions.rs  config.rs  dashboard.rs  doctor.rs  eval.rs  exit_codes.rs  export.rs  fixture_utils.rs  generate.rs  init.rs  lint.rs  mod.rs  output.rs  publish.rs  registry_client.rs  report.rs  stats.rs  test.rs  trust_check.rs  update.rs  validate.rs
crates/agentcarousel/src/core/: error.rs  hex_util.rs  ids.rs  judge_provider.rs  mod.rs  models.rs  retry.rs
crates/agentcarousel/src/evaluators/: assertions.rs  golden.rs  judge.rs  mod.rs  process.rs  rules.rs  trait_def.rs
crates/agentcarousel/src/fixtures/: loader.rs  mock.rs  mod.rs  schema.rs
crates/agentcarousel/src/reporters/: diff.rs  history.rs  json.rs  junit.rs  mod.rs  terminal.rs
crates/agentcarousel/src/reporters/dashboard/: api.rs  assets.rs  mod.rs
crates/agentcarousel/src/runner/: aggregation.rs  executor.rs  generator.rs  git_revision.rs  mod.rs  orchestration.rs  sandbox.rs  tracer.rs
crates/agentcarousel/templates/: bundle-manifest-skeleton.json  fixture-skeleton.yaml  generate-prompt.md
crates/agentcarousel/tests/: bundle_negative.rs  bundle_pull.rs  bundle_registry_flow.rs  eval_live_mode.rs  eval_run_hint_negative.rs  export_evidence_pack.rs  init_negative.rs  report_diff_threshold.rs  report_show_humanized.rs  test_exit_codes.rs  trust_check_flow.rs  validate_negative.rs
docs/: atf-ecosystem.md  ci-gates.md  concepts.md  contributing-fixtures.md  fixture-development-process.md  fixture-format.md  fixture-tag-examples.md  getting-started.md  index.md  registry-api-contract.md  trust-posture.md
docs/judge-prompts/: aibom-auditor-v1.md  ambient-documentation-rba-v1.md  cmmc-assessor-v1.md  code-reviewer-v1.md  customer-support-v1.md  m25-21-rba-v1.md  terraform-sentinel-scaffold-v1.md
fixtures/accessibility-auditor/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/accessibility-auditor/golden/: product-card-findings.txt
fixtures/bundles/accessibility-auditor/: bundle.manifest.json
fixtures/bundles/aibom-auditor/: bundle.manifest.json
fixtures/bundles/ambient-documentation-rba/: bundle.manifest.json
fixtures/bundles/ci-failure-triager/: bundle.manifest.json
fixtures/bundles/cmmc-assessor/: bundle.manifest.json
fixtures/bundles/code-reviewer/: bundle.manifest.json
fixtures/bundles/customer-support/: bundle.manifest.json
fixtures/bundles/data-privacy-classifier/: bundle.manifest.json
fixtures/bundles/database-migration-advisor/: bundle.manifest.json
fixtures/bundles/dockerfile-linter/: bundle.manifest.json
fixtures/bundles/env-file-auditor/: bundle.manifest.json
fixtures/ci-failure-triager/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/code-reviewer/: bundle.manifest.json  cases.yaml
fixtures/customer-support/: bundle.manifest.json
fixtures/data-privacy-classifier/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/database-migration-advisor/: bundle.manifest.json  prompt.md
fixtures/dockerfile-linter/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/env-file-auditor/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/error-message-improver/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/examples/: example-skill.yaml  invalid-skill.yaml
fixtures/github-actions-generator/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/prompt-injection-detector/: bundle.manifest.json  prompt.md
fixtures/regex-builder/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/skills/: accessibility-auditor.yaml  aibom-auditor.yaml  ambient-documentation-rba.yaml  ci-failure-triager.yaml  cmmc-assessor.yaml  customer-support.yaml  data-privacy-classifier.yaml  database-migration-advisor.yaml  deslop.yaml  env-file-auditor.yaml  error-message-improver.yaml  example-skill.yaml  m25-21-rba.yaml  prompt-injection-detector.yaml  rag-qa.yaml  terraform-sentinel-scaffold.yaml  tool-call-correctness.yaml  unit-test-generator.yaml
fixtures/sql-query-generator/: bundle.manifest.json  cases.yaml  prompt.md
fixtures/terraform-sentinel-scaffold/: bundle.manifest.json  cases.yaml
fixtures/unit-test-generator/: bundle.manifest.json  cases.yaml  prompt.md
mocks/: agent-response.json  tool-mocks.json
mocks/deslop-harness/: count-blocks.sh  run.sh
packaging/: RELEASE.md  install.sh  publish-distribution.sh  update-homebrew.sh
packaging/homebrew/: agentcarousel.rb
schemas/: skill-definition.schema.json
scripts/: carousel-evidence-5x.sh  generate-auditor-pdf.py  publish-distribution.sh
templates/: fixture-bundle.manifest.json  fixture-skeleton.yaml
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: AgcRunner.ts  CaseDetailPanel.ts  DiagnosticsProvider.ts  FixtureParser.ts  FixtureTreeProvider.ts  RunHistoryPanel.ts  StatsPanel.ts  extension.ts  types.ts
(+25 files in other folders)
