[package]
name = "agentcarousel"
version = "0.4.8"
edition = "2021"
rust-version = "1.95"
description = "Evaluate agents and skills with YAML fixtures, run cases (mock or live), and keep run rows in SQLite for reports and evidence export."
readme = "../../README.md"
license = "Apache-2.0"
repository = "https://github.com/agentcarousel/agentcarousel"
documentation = "https://docs.rs/agentcarousel"
homepage = "https://agentcarousel.com"
keywords = ["agents", "skills", "testing", "cli", "eval"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "agentcarousel"
path = "src/main.rs"

[[bin]]
name = "agc"
path = "src/bin/agc.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.16.3"
flate2 = "1"
globset = "0.4"
indicatif = "0.18.4"
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
openrouter-rs = "0.9.0"
quick-xml = { version = "0.39.4", features = ["serialize"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
similar = "3"
tar = "0.4"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
toml = "1.1.2"
ulid = "1"
walkdir = "2"

# Bundled SQLite on Linux and Windows so CI/release binaries link without host libsqlite
# (cross-compile to aarch64-gnu has no arm64 libsqlite; musl already needed bundled).
# macOS uses the default (system SQLite).
[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
mockito = "1"
serde_json = "1"
tempfile = "3"
